2005-09-26  Gabor Csardi  <csardi@szaffi>

	* src/structural_properties.c (igraph_average_path_length) :
	normfact double instead of long int, the saga of this bug ends here

	* src/random.c (fsign, imax2, imin2, R_FINITE, ISNAN) : new, from
	the R source code

2005-09-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_fruchterman_reingold) : implemented
	in C based on the SNA 1.0 version
	* src/rinterface.c (R_igraph_layout_fruchterman_reingold) : interface
	* igraph/R/layout.R (layout.fruchterman.reingold) : interface
	* igraph/R/tkplot.R (.tkplot.layout.dialog) : new parameter type,
	expression, this may depend on the graph itself, the 
	Fruchterman-Reingold algorithm has new parameters

2005-09-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/conversion.c (igraph_get_edgelist) : new function
	* src/rinterface.c (R_igraph_get_edgelist) : interface
	* igraph/R/conversion.R (get.edgelist) : interface

	* src/conversion.c (igraph_get_adjacency) : new function
	* src/rinterface.c (R_igraph_get_adjacency) : interface
	* igraph/R/conversion.R (get.adjacency) : interface

	* src/structural_properties.c (igraph_simplify) : new function
	* src/rinterface.c (R_igraph_simplify) : interface
	* igraph/R/conversion.R (simplify) : interface

	* src/types.c (vector_sort) : new function
	
2005-09-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/random.h (RNG_UNIF01()) : introduced
	
	* src/games.c (erdos_renyi_game) : gnm & gnp type
	(erdos_renyi_game_gnp, erdos_renyi_game_gnm) : new functions
	* igraph/R/games.R (erdos.renyi.game) : interface
	* src/rinterface.c (R_igraph_random_sample) : interface	

	* src/random.c (igraph_random_sample, igraph_random_sample_alga) :
	new functions
	* igraph/R/other.R (igraph.sample) : interface
	* src/rinterface.c (R_igraph_random_sample) : interface

2005-09-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_erdos_renyi_game) :
	* igraph/R/games.R (erdos.renyi.game) :
	* src/rinterface.c :